--- a/Lab 8 Part 2 Time Series.Rmd
+++ b/Lab 8 Part 2 Time Series.Rmd
@@ -49,3 +49,218 @@ toolik_ts <- toolik %>%
   as_tsibble(key = NULL, index = date)
 ```
 
+Now let's plot it: 
+```{r}
+ggplot(data = toolik_ts, aes(x = date, y = mean_airtemp)) +
+  geom_line() +
+  labs(x = "Date",
+       y = "Mean daily air temperature (Celsius)\n at Toolik Station") #the \n is a line break so the title will be separated across two lines rather than one long line 
+```
+
+We need to ask some big picture questions at this point, like: 
+
+- Does there appear to be an overall trend? No.
+- Does there appear to be seasonality? Yes.
+- Does there appear to be cyclicality? Unsure.
+- Any notable outliers or additional patterns? No noted.
+
+## 2. Use `index_by()` to aggregate time series by increments
+
+We will use `index_by()` instead of `group_by()` to do the trick. See `?index_by()` to group by a time index, then `summarize()` to specify what to calulate & return for each interval. 
+
+```{r}
+toolik_month <- toolik_ts %>% 
+  index_by(yr_mo = ~yearmonth(.)) %>% #this is like group by but specific to time series tibbles (can do it with year and month or year and week or year and day)
+  summarize(monthly_mean_temp = mean(mean_airtemp, na.rm = TRUE))
+```
+
+Now let's take a look: 
+```{r}
+ggplot(data = toolik_month, aes(x = yr_mo, y = monthly_mean_temp)) +
+  geom_line() 
+ 
+# Or break it up by month: 
+toolik_month %>% 
+  ggplot(aes(x = year(yr_mo), y = monthly_mean_temp)) +
+  geom_line() +
+  facet_wrap(~month(yr_mo, label = TRUE)) +
+  labs(x = "Year",
+       y = "Annual mean air temperature (Celsius)",
+       title = "Toolik Station mean annual air temperature",
+       subtitle = "1988 - 2018",
+       caption = "Source: Shaver, G. 2019. A multi-year DAILY \nweather file for the Toolik Field Station at Toolik Lake, AK\n starting 1988 to present. ver 4. Environmental Data Initiative.")
+```
+
+Can you do other increments with `index_by()`? Absolutely! **See `?index_by()` for grouping options!**
+
+Let's find the yearly average for 2000: 
+
+```{r}
+toolik_annual <- toolik_ts %>% 
+  index_by(yearly = ~year(.)) %>% 
+  summarize(annual_airtemp = mean(mean_airtemp, na.rm = TRUE))
+ 
+ggplot(data = toolik_annual, aes(x = yearly, y = annual_airtemp)) +
+  geom_line()
+```
+
+And how about a weekly average?
+```{r}
+toolik_weekly <- toolik_ts %>% 
+  index_by(weekly = ~yearweek(.)) %>% 
+  summarize(weekly_airtemp = mean(mean_airtemp, na.rm = TRUE))
+ 
+ggplot(data = toolik_weekly, aes(x = weekly, y = weekly_airtemp)) +
+  geom_line()
+```
+
+## 3. Use `filter_index()` to filter by date-times!
+
+We can use `filter_index()` specifically to help us filter data by time spans. See `?filter_index()` for more information.
+
+**Example 1:** Filter from June 2000 through October 2001
+
+```{r}
+toolik_ts %>% 
+  filter_index("2000-06" ~ "2001-10")
+```
+
+**Example 2:** Filter from April 10, 2006 to May 15, 2006
+
+```{r}
+toolik_ts %>% 
+  filter_index("2006-04-10" ~ "2006-05-15")
+```
+
+**Example 3:** Filter from December 20, 2017 to the end of the dataset
+
+```{r}
+toolik_ts %>% 
+  filter_index("2017-12-20" ~ .)
+```
+
+## 4. Explore changes in seasonality with seasonplots
+
+Let's look at seasonality over the years with a seasonplot, using the `feasts::gg_season()` function. Notice that we can still do wrangling on a tsibble like we would with a normal data frame: 
+
+```{r}
+toolik_ts %>% 
+  filter(year(date) > 2014) %>% 
+  gg_season(y = mean_airtemp)
+```
+
+Daily measurements seems a bit excessive to return in this visualization, right? Maybe it makes more sense to use the monthly averages in ``. 
+
+```{r}
+# Now a season plot: 
+toolik_month %>% 
+  gg_season(y = monthly_mean_temp) +
+  theme_minimal() +
+  labs(x = "Year",
+       y = "Mean monthly air temperature (Celsius)",
+       title = "Toolik Station air temperature")
+```
+
+## 5. Seasonal subseries plots
+
+Sometimes it can be useful to explore how values within one season/month/etc. change over time (e.g. across years). 
+
+We can use `gg_subseries()` to explore how values change within a specified window over time. 
+
+Do you notice any trends that differ across the months? 
+
+
+```{r}
+toolik_month %>% 
+  gg_subseries(monthly_mean_temp)
+```
+
+## 6. Moving averages in tsibbles
+
+We'll use the `slider` package to find moving (or rolling) averages for different window sizes. 
+
+The general structure will tend to be something like: 
+
+`df %>% slide(variable, function, .before = , .after = )`
+
+Let's make a test vector just so we can see how this works:
+
+```{r}
+set.seed(2021)
+test<- rnorm(100, mean = 40, sd = 10)
+ 
+# Show the series based on values +2 and -2 from each observation
+# Use ~.x to show the windows
+slide(test, ~.x, .before = 2, .after = 2) #this is our moving average
+ 
+# Change that to a function name to actually calculate something for each window
+# Note that I add `as.numeric` here, since the outcome is otherwise a list
+
+w5 <- as.numeric(slide(test, mean, .before = 2, .after = 2))
+w5
+ 
+# Find the mean value of a window with n = 11, centered:
+w11 <- as.numeric(slide(test, mean, .before = 5, .after = 5))
+w11
+ 
+# Find the mean value of a window with n = 19, centered:
+w19 <- as.numeric(slide(test, mean, .before = 9, .after = 9))
+w19
+ 
+# Plot these together: 
+combo <- data_frame(time = seq(1:100), test, w5, w11, w19)
+ 
+ggplot(data = combo) +
+  geom_line(aes(x = time, y = test)) +
+  geom_line(aes(x = time, y = w5), color = "red") +
+  geom_line(aes(x = time, y = w11), color = "blue") +
+  geom_line(aes(x = time, y = w19), color = "orange")
+ 
+```
+
+Now for an example with our Toolik Station data, let's say we want to find the *average* value at each observation, with a window that extends forward and backward n days from the observation:
+
+```{r}
+roll_toolik_15 <- toolik_ts %>% 
+  mutate(ma_15d = as.numeric(slide(toolik_ts$mean_airtemp, mean, .before = 7, .after = 7)))
+ 
+roll_toolik_61 <- toolik_ts %>% 
+  mutate(ma_61d = as.numeric(slide(toolik_ts$mean_airtemp, mean, .before = 30, .after = 30)))
+ 
+ggplot() +
+  geom_line(data = toolik_ts, aes(x = date, y = mean_airtemp), size = 0.2, color = "gray") +
+  geom_line(data = roll_toolik_15, aes(x = date, y = ma_15d), color = "orange") + #this is the y based on the moving average from the 15 day window
+  geom_line(data = roll_toolik_61, aes(x = date, y = ma_61d), color = "blue") +
+  theme_minimal() # this is the y based on the moving average from the 61 day window
+```
+
+## 7. Autocorrelation function
+
+We'll look at outcomes for both daily lags (yikes) and monthly lags (cool).
+
+```{r}
+toolik_ts %>%
+  ACF(mean_airtemp) %>% #this is the autocorrelation function
+  autoplot()
+ 
+toolik_month %>% 
+  ACF(monthly_mean_temp) %>% 
+  autoplot()
+```
+Day: If we do a lag of one day do we think there would be a high correlation (yes!) because the acf is high, as you get farther and farther away, observations a month later are less and less similar as time goes on
+
+Month Analysis: [add later]
+
+##8. Decomposition
+
+Here we will use STL decomposition (Seasonal, Trend, and Loess) decomposition. You can read about the advantages of STL decomposition here: https://otexts.com/fpp2/stl.html.
+
+
+```{r}
+toolik_dec <- toolik_month %>% 
+  model(STL(monthly_mean_temp ~ season(window = Inf))) #window is wide open with Inf
+ 
+components(toolik_dec) %>% autoplot()
+```
+
+## END Part 2
